# GameOfLife

./: CMakeLists.txt
include/: gameoflife.hpp  world.hpp
src/: gameoflife.cpp  main.cpp  world.cpp
